// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rules Approved on rule including both teams and users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Approved on rule including both teams and users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Approved on rule including only teams for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Approved on rule including only teams for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Approved on rule including only users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Approved on rule including only users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Approved on rule not specifying users or teams 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Approved on rule not specifying users or teams 2`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Approved when .github/pr-custom-review.yml is changed 1`] = `
Array [
  "Changed files Set(1) { '.github/pr-custom-review.yml' }",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Approved when .github/workflows/pr-custom-review.yml is changed 1`] = `
Array [
  "Changed files Set(1) { '.github/workflows/pr-custom-review.yml' }",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Approved when line after lock is modified (+) 1`] = `
Array [
  "Diff has changes to 🔒 lines or lines following 🔒",
  "Changed files Set(1) { 'condition' }",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Approved when line after lock is modified (-) 1`] = `
Array [
  "Diff has changes to 🔒 lines or lines following 🔒",
  "Changed files Set(1) { 'condition' }",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Approved when lock line is modified (+) 1`] = `
Array [
  "Diff has changes to 🔒 lines or lines following 🔒",
  "Changed files Set(1) { 'condition' }",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Approved when lock line is modified (-) 1`] = `
Array [
  "Diff has changes to 🔒 lines or lines following 🔒",
  "Changed files Set(1) { 'condition' }",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Has no approval on rule including both teams and users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker2' => { team: null },
  'userCoworker' => { team: 'team' }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition\\" needs at least 2 approvals, but 0 were matched. The following users have not approved yet: userCoworker2, userCoworker (team: team).",
  "",
]
`;

exports[`Rules Has no approval on rule including both teams and users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker2' => { team: null },
  'userCoworker' => { team: 'team' }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition\\" needs at least 2 approvals, but 0 were matched. The following users have not approved yet: userCoworker2, userCoworker (team: team).",
  "",
]
`;

exports[`Rules Has no approval on rule including only teams for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker' => { team: 'team' },
  'userCoworker2' => { team: 'team' }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition\\" needs at least 2 approvals, but 0 were matched. The following users have not approved yet: userCoworker (team: team), userCoworker2 (team: team).",
  "",
]
`;

exports[`Rules Has no approval on rule including only teams for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker' => { team: 'team' },
  'userCoworker2' => { team: 'team' }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition\\" needs at least 2 approvals, but 0 were matched. The following users have not approved yet: userCoworker (team: team), userCoworker2 (team: team).",
  "",
]
`;

exports[`Rules Has no approval on rule including only users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker' => { team: null },
  'userCoworker2' => { team: null }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition\\" needs at least 2 approvals, but 0 were matched. The following users have not approved yet: userCoworker, userCoworker2.",
  "",
]
`;

exports[`Rules Has no approval on rule including only users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker' => { team: null },
  'userCoworker2' => { team: null }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition\\" needs at least 2 approvals, but 0 were matched. The following users have not approved yet: userCoworker, userCoworker2.",
  "",
]
`;

exports[`Rules Has no approval on rule not specifying users or teams 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {  }",
  "ERROR:  The following problems were found:",
  "Rule condition requires at least 2 approvals, but only 0 were given",
  "",
]
`;

exports[`Rules Has no approval on rule not specifying users or teams 2`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {  }",
  "ERROR:  The following problems were found:",
  "Rule condition requires at least 2 approvals, but only 0 were given",
  "",
]
`;

exports[`Rules Has no approval when .github/pr-custom-review.yml is changed 1`] = `
Array [
  "Changed files Set(1) { '.github/pr-custom-review.yml' }",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: 'team3' } }",
  "ERROR:  The following problems were found:",
  "Rule \\"Action files changed\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team3).",
  "",
]
`;

exports[`Rules Has no approval when .github/workflows/pr-custom-review.yml is changed 1`] = `
Array [
  "Changed files Set(1) { '.github/workflows/pr-custom-review.yml' }",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: 'team3' } }",
  "ERROR:  The following problems were found:",
  "Rule \\"Action files changed\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team3).",
  "",
]
`;

exports[`Rules Has no approval when line after lock is modified (+) 1`] = `
Array [
  "Diff has changes to 🔒 lines or lines following 🔒",
  "Changed files Set(1) { 'condition' }",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker' => { team: 'team' },
  'userCoworker2' => { team: 'team2' }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"LOCKS TOUCHED (team: team)\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker (team: team).",
  "Rule \\"LOCKS TOUCHED (team: team2)\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "",
]
`;

exports[`Rules Has no approval when line after lock is modified (-) 1`] = `
Array [
  "Diff has changes to 🔒 lines or lines following 🔒",
  "Changed files Set(1) { 'condition' }",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker' => { team: 'team' },
  'userCoworker2' => { team: 'team2' }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"LOCKS TOUCHED (team: team)\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker (team: team).",
  "Rule \\"LOCKS TOUCHED (team: team2)\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "",
]
`;

exports[`Rules Has no approval when lock line is modified (+) 1`] = `
Array [
  "Diff has changes to 🔒 lines or lines following 🔒",
  "Changed files Set(1) { 'condition' }",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker' => { team: 'team' },
  'userCoworker2' => { team: 'team2' }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"LOCKS TOUCHED (team: team)\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker (team: team).",
  "Rule \\"LOCKS TOUCHED (team: team2)\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "",
]
`;

exports[`Rules Has no approval when lock line is modified (-) 1`] = `
Array [
  "Diff has changes to 🔒 lines or lines following 🔒",
  "Changed files Set(1) { 'condition' }",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker' => { team: 'team' },
  'userCoworker2' => { team: 'team2' }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"LOCKS TOUCHED (team: team)\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker (team: team).",
  "Rule \\"LOCKS TOUCHED (team: team2)\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "",
]
`;

exports[`Rules Is missing approval on rule including both teams and users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(2) {
  'userCoworker2' => { team: null },
  'userCoworker3' => { team: 'team' }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition\\" needs at least 2 approvals, but 1 were matched. The following users have not approved yet: userCoworker2, userCoworker3 (team: team).",
  "",
]
`;

exports[`Rules Is missing approval on rule including both teams and users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(2) {
  'userCoworker2' => { team: null },
  'userCoworker3' => { team: 'team' }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition\\" needs at least 2 approvals, but 1 were matched. The following users have not approved yet: userCoworker2, userCoworker3 (team: team).",
  "",
]
`;

exports[`Rules Is missing approval on rule including only teams for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: 'team' } }",
  "ERROR:  The following problems were found:",
  "Rule \\"condition\\" needs at least 2 approvals, but 1 were matched. The following users have not approved yet: userCoworker2 (team: team).",
  "",
]
`;

exports[`Rules Is missing approval on rule including only teams for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: 'team' } }",
  "ERROR:  The following problems were found:",
  "Rule \\"condition\\" needs at least 2 approvals, but 1 were matched. The following users have not approved yet: userCoworker2 (team: team).",
  "",
]
`;

exports[`Rules Is missing approval on rule including only users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: null } }",
  "ERROR:  The following problems were found:",
  "Rule \\"condition\\" needs at least 2 approvals, but 1 were matched. The following users have not approved yet: userCoworker2.",
  "",
]
`;

exports[`Rules Is missing approval on rule including only users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: null } }",
  "ERROR:  The following problems were found:",
  "Rule \\"condition\\" needs at least 2 approvals, but 1 were matched. The following users have not approved yet: userCoworker2.",
  "",
]
`;

exports[`Rules Is missing approval on rule not specifying users or teams 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "ERROR:  The following problems were found:",
  "Rule condition requires at least 2 approvals, but only 1 were given",
  "",
]
`;

exports[`Rules Is missing approval on rule not specifying users or teams 2`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "ERROR:  The following problems were found:",
  "Rule condition requires at least 2 approvals, but only 1 were given",
  "",
]
`;

exports[`Rules Is missing approval when .github/pr-custom-review.yml is changed 1`] = `
Array [
  "Changed files Set(1) { '.github/pr-custom-review.yml' }",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: 'team3' } }",
  "ERROR:  The following problems were found:",
  "Rule \\"Action files changed\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team3).",
  "",
]
`;

exports[`Rules Is missing approval when .github/workflows/pr-custom-review.yml is changed 1`] = `
Array [
  "Changed files Set(1) { '.github/workflows/pr-custom-review.yml' }",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: 'team3' } }",
  "ERROR:  The following problems were found:",
  "Rule \\"Action files changed\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team3).",
  "",
]
`;

exports[`Rules Is missing approval when line after lock is modified (+) 1`] = `
Array [
  "Diff has changes to 🔒 lines or lines following 🔒",
  "Changed files Set(1) { 'condition' }",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: 'team2' } }",
  "ERROR:  The following problems were found:",
  "Rule \\"LOCKS TOUCHED (team: team2)\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "",
]
`;

exports[`Rules Is missing approval when line after lock is modified (-) 1`] = `
Array [
  "Diff has changes to 🔒 lines or lines following 🔒",
  "Changed files Set(1) { 'condition' }",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: 'team2' } }",
  "ERROR:  The following problems were found:",
  "Rule \\"LOCKS TOUCHED (team: team2)\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "",
]
`;

exports[`Rules Is missing approval when lock line is modified (+) 1`] = `
Array [
  "Diff has changes to 🔒 lines or lines following 🔒",
  "Changed files Set(1) { 'condition' }",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: 'team2' } }",
  "ERROR:  The following problems were found:",
  "Rule \\"LOCKS TOUCHED (team: team2)\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "",
]
`;

exports[`Rules Is missing approval when lock line is modified (-) 1`] = `
Array [
  "Diff has changes to 🔒 lines or lines following 🔒",
  "Changed files Set(1) { 'condition' }",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: 'team2' } }",
  "ERROR:  The following problems were found:",
  "Rule \\"LOCKS TOUCHED (team: team2)\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "",
]
`;

exports[`Rules Rule kind AndRule: Approved specifying both teams and users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true },
  { id: 2, user: 'userCoworker3', isApproval: true }
}",
]
`;

exports[`Rules Rule kind AndRule: Approved specifying both teams and users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true },
  { id: 2, user: 'userCoworker3', isApproval: true }
}",
]
`;

exports[`Rules Rule kind AndRule: Approved specifying only teams for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Rule kind AndRule: Approved specifying only teams for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Rule kind AndRule: Approved specifying only users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Rule kind AndRule: Approved specifying only users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Rule kind AndRule: Has no approval specifying both teams and users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker2' => { team: 'team1' },
  'userCoworker3' => { team: null }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[0]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team1).",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "Rule \\"condition[2]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker3.",
  "",
]
`;

exports[`Rules Rule kind AndRule: Has no approval specifying both teams and users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker2' => { team: 'team1' },
  'userCoworker3' => { team: null }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[0]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team1).",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "Rule \\"condition[2]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker3.",
  "",
]
`;

exports[`Rules Rule kind AndRule: Has no approval specifying only teams for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: 'team1' } }",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[0]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team1).",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "",
]
`;

exports[`Rules Rule kind AndRule: Has no approval specifying only teams for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: 'team1' } }",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[0]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team1).",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "",
]
`;

exports[`Rules Rule kind AndRule: Has no approval specifying only users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker' => { team: null },
  'userCoworker2' => { team: null }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[0]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker.",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2.",
  "",
]
`;

exports[`Rules Rule kind AndRule: Has no approval specifying only users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker' => { team: null },
  'userCoworker2' => { team: null }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[0]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker.",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2.",
  "",
]
`;

exports[`Rules Rule kind AndRule: Is missing approval specifying both teams and users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(2) {
  'userCoworker2' => { team: 'team2' },
  'userCoworker3' => { team: null }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "Rule \\"condition[2]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker3.",
  "",
]
`;

exports[`Rules Rule kind AndRule: Is missing approval specifying both teams and users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(2) {
  'userCoworker2' => { team: 'team2' },
  'userCoworker3' => { team: null }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "Rule \\"condition[2]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker3.",
  "",
]
`;

exports[`Rules Rule kind AndRule: Is missing approval specifying only teams for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: 'team2' } }",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "",
]
`;

exports[`Rules Rule kind AndRule: Is missing approval specifying only teams for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: 'team2' } }",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "",
]
`;

exports[`Rules Rule kind AndRule: Is missing approval specifying only users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: null } }",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2.",
  "",
]
`;

exports[`Rules Rule kind AndRule: Is missing approval specifying only users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: null } }",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2.",
  "",
]
`;

exports[`Rules Rule kind OrRule: Approved specifying both teams and users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true },
  { id: 2, user: 'userCoworker3', isApproval: true }
}",
]
`;

exports[`Rules Rule kind OrRule: Approved specifying both teams and users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true },
  { id: 2, user: 'userCoworker3', isApproval: true }
}",
]
`;

exports[`Rules Rule kind OrRule: Approved specifying only teams for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Rule kind OrRule: Approved specifying only teams for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Rule kind OrRule: Approved specifying only users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Rule kind OrRule: Approved specifying only users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {
  { id: 0, user: 'userCoworker', isApproval: true },
  { id: 1, user: 'userCoworker2', isApproval: true }
}",
]
`;

exports[`Rules Rule kind OrRule: Has no approval specifying both teams and users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker2' => { team: 'team1' },
  'userCoworker3' => { team: null }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[0]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team1).",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "Rule \\"condition[2]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker3.",
  "",
]
`;

exports[`Rules Rule kind OrRule: Has no approval specifying both teams and users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker2' => { team: 'team1' },
  'userCoworker3' => { team: null }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[0]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team1).",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "Rule \\"condition[2]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker3.",
  "",
]
`;

exports[`Rules Rule kind OrRule: Has no approval specifying only teams for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: 'team1' } }",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[0]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team1).",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "",
]
`;

exports[`Rules Rule kind OrRule: Has no approval specifying only teams for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(1) { 'userCoworker2' => { team: 'team1' } }",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[0]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team1).",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2 (team: team2).",
  "",
]
`;

exports[`Rules Rule kind OrRule: Has no approval specifying only users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker' => { team: null },
  'userCoworker2' => { team: null }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[0]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker.",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2.",
  "",
]
`;

exports[`Rules Rule kind OrRule: Has no approval specifying only users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] {  }",
  "usersToAskForReview Map(2) {
  'userCoworker' => { team: null },
  'userCoworker2' => { team: null }
}",
  "ERROR:  The following problems were found:",
  "Rule \\"condition[0]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker.",
  "Rule \\"condition[1]\\" needs at least 1 approvals, but 0 were matched. The following users have not approved yet: userCoworker2.",
  "",
]
`;

exports[`Rules Rule kind OrRule: Is missing approval specifying both teams and users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
]
`;

exports[`Rules Rule kind OrRule: Is missing approval specifying both teams and users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
]
`;

exports[`Rules Rule kind OrRule: Is missing approval specifying only teams for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
]
`;

exports[`Rules Rule kind OrRule: Is missing approval specifying only teams for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
]
`;

exports[`Rules Rule kind OrRule: Is missing approval specifying only users for changed_files 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" for the file condition",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
]
`;

exports[`Rules Rule kind OrRule: Is missing approval specifying only users for diff 1`] = `
Array [
  "Changed files Set(1) { 'condition' }",
  "Matched expression \\"condition\\" of rule \\"condition\\" on diff",
  "latestReviews [Map Iterator] { { id: 1, user: 'userCoworker', isApproval: true } }",
]
`;
